2012-12-05  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9DRI-LN4F+ OEM sensors/events.
	
2012-10-29  Albert Chu <chu11@llnl.gov>

	* man/: Fix typos.
	
2012-10-10  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: IPMICONSOLE_DEBUG_FILE now dumps to current
	working directory instead of /var/log.  This is a debug feature
	and not a logging feature.
	
2012-10-09  Dave Walker <DaveWalker@ubuntu.com>,

	* common/toolcommon/tool-daemon-common.c (daemonize_common): Check
	read and write for errors.
	
2012-10-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, libipmiconsole/, libipmimonitoring/,
	common/parsecommon/, man/: Support new
	NO_CHECKSUM_CHECK/nochecksumcheck workaround to deal with
	Supermicro motherboards that incorrectly calculate packet
	checksums.
	
2012-10-04  Albert Chu <chu11@llnl.gov>

	Add OEM extension support for Dell Poweredge R720

	* ipmi-oem/: Support Dell get-nic-selection-failover,
	set-nic-selection-failover, power-monitoring-over-interval,
	power-monitoring-interval-range, get-blade-slot-info,
	get-last-post-code.  Support new version of active-lom-status for
	R720.  Support Dell specific OEM completion codes.

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h:
	Add updates based on Dell documentation.

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Update
	for new R720.

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_oem_sensor_type_message):
	Support Dell R720.

	* libfreeipmi/sel/ipmi-sel-string-dell.c: Update for new SEL
	events in Dell R720.  Handle a few additional R610/R710 cases that
	were missed in earlier changes.

2012-09-27  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-workaround-extra-text.man: Fix typo.
	
2012-09-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/debug/ipmi-debug.c (ipmi_obj_dump): Always output
	SDR and SEL record data in byte array format.
